css/main.css
/*! HTML5 Boilerplate v7.2.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */
html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
@media screen and (max-width: 767px)

{

  p {font-family: "Open Sans"; font-weight: 400;}

  .heading {font-family: "Poppins"; font-weight: 400;}

  #par-final {font-family: "Open Sans"; font-weight: 400;}

body {font-size: 16px;}

#logo {float: left;
       width: 132px;
       height: 25px;
       margin-left: 24px;
       margin-top: 28px;
       margin-bottom: 128px;}

#illustration {width: 297px;
              height: 185px;
              margin-bottom: 73px;
              text-align: center;}



#trial {float: right;
        margin-right: 24px;
        margin-top: 22px;
        border: 1px solid #ff7dce;
        border-radius: 10px;
        color: #ff7dce;
        padding: 8px 18px 8px 18px;}

.h-build {clear: both;
          margin-left: 56px;
          margin-right: 56px;
          font-size: 25px;}

.background {background-color: #f6fbff;
             padding-top: 120px;
             padding-bottom: 105px;}

.hero {text-align: center;}

.flex-container {display: flex;
                 flex-flow: column wrap;
                 width: 100%;
                 align-items: center;
                 text-align: center;
                 justify-content: center;}

.flex-container1 {display: flex;
                 flex-flow: column wrap;
                 width: 100%;
                 align-items: center;}

#users {width: 80%;
        height: 80%;
        margin-bottom: 100px;}

h3, p   {align-self: flex-start;
      margin-left: 27px;
      margin-right: 32px;}

.end-page {margin-top: 129px; text-align: center;}

#h-ready {font-size: 24px; margin-bottom: 46px;}

.h-get {margin-bottom: 119px;
        border: 1px solid #ff79be;
        background-color: #ff79be;
        padding: 16px 0px 16px 0px;
        width: 60%;
        color: white;
        border-radius: 10px;
        font-size: 16px;
        margin-left: auto;
        margin-right: auto;}

footer {background-color: #00252e;
        color: white;}

.subs {margin-bottom: 9px;
      text-transform: uppercase;
      padding-top: 132px;}

.icons {margin-left: 27px;}

.fa-twitter {margin-left: 24px; margin-right: 24px;}

.group {margin-top: 58px;}

.footer-p {margin-top: 30px;}

input {width: 70%;
       margin-bottom: 9px;
       color: #e1e6ec;
       display: inline;
       height: 40px;
       margin-left: 27px;}

#arrow {width: 18px;
        height: 12px;
        position: relative;
        bottom: 2px;
        right: 6px;
        border: 1px solid #ff73c1;
        padding: 5% 5% 5% 5%;
        background-color: #ff73c1;}

.wlogo {fill: white;}

#logo2 {margin-bottom: 48px; margin-top: 86px; margin-left: 27px;}

.flex-container2 {display: flex;
                  flex-flow: column wrap;
                  font-size: 22px;}

.background1 {display: flex;
              flex-flow: column wrap;
              justify-content: flex-end;
              align-content: center;
              margin-top: 78px;
              background-image: url(../img/bg-footer-mobile.png);
              background-size: cover;
              height: 94px;;
              width: 100%;}
}


/* Desktop */

@media screen and (min-width: 1440px)

{
  p {font-family: "Open Sans"; font-weight: 400;}

  .heading {font-family: "Poppins"; font-weight: 400;}

  #par-final {font-family: "Open Sans"; font-weight: 400;}

  body {font-size: 16px;}

  #logo {float: left;
         margin-left: 80px;
         margin-top: 80px;
         margin-bottom: 250px;}

  #illustration {margin-bottom: 294px;
                text-align: center;}



  #trial {float: right;
          margin-right: 80px;
          margin-top: 70px;
          border: 1px solid #ff7dce;
          border-radius: 10px;
          color: #ff7dce;
          font-size: 24px;
          padding: 8px 18px 8px 18px;}

          .h-build {clear: both;
                    margin-left: 56px;
                    margin-right: 56px;
                    font-size: 60px;}

          .p-initial {font-size: 24px; width: 54%; text-align: center;}

          .par-main {font-size: 18px;}

          .h-main {font-weight: 700;}

          .background {display: flex; flex-flow: row wrap; justify-content: center; align-items: center;}

          .hero {order: 2; margin-right: 94px;}

          .column2 {width: 34%; order: 1; margin-right: 115px; margin-left: 80px;}

          #users {width: 642px; height: 485px;}

          .hero {text-align: center;}

          .flex-container {display: flex;
                           flex-flow: column wrap;
                           width: 100%;
                           align-items: center;
                           text-align: center;
                           justify-content: center;}

          .flex-container1 {display: flex;
                           flex-flow: column wrap;
                           width: 100%;
                           align-items: center;}

          #h-ready {margin-top: 318px;}

          .h-get {margin-bottom: 119px;
                  border: 1px solid #ff79be;
                  background-color: #ff79be;
                  padding: 16px 0px 16px 0px;
                  width: 28%;
                  color: white;
                  border-radius: 10px;
                  font-size: 16px;
                  margin-left: auto;
                  margin-right: auto;}

}




/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
  display: none !important;
}

/*
* Hide only visually, but have it available for screen readers:
* https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
*
* 1. For long content, line feeds are not interpreted as spaces and small width
*    causes content to wrap 1 word per line:
*    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
*/

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
* Extends the .sr-only class to allow the element
* to be focusable when navigated to via the keyboard:
* https://www.drupal.org/node/897638
*/

.sr-only.focusable:active,
.sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
* Hide visually and from screen readers, but maintain layout
*/

.invisible {
  visibility: hidden;
}

/*
* Clearfix: contain floats
*
* For modern browsers
* 1. The space content is one way to avoid an Opera bug when the
*    `contenteditable` attribute is included anywhere else in the document.
*    Otherwise it causes space to appear at the top and bottom of elements
*    that receive the `clearfix` class.
* 2. The use of `table` rather than `block` is only necessary if using
*    `:before` to contain the top-margins of child elements.
*/

.clearfix:before,
.clearfix:after {
  content: " ";
  /* 1 */
  display: table;
  /* 2 */
}

.clearfix:after {
  clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
  /* Style adjustments for viewports that meet the condition */
}

@media print,
  (-webkit-min-device-pixel-ratio: 1.25),
  (min-resolution: 1.25dppx),
  (min-resolution: 120dpi) {
  /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   https://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
  *,
  *:before,
  *:after {
    background: transparent !important;
    color: #000 !important;
    /* Black prints faster */
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
    text-shadow: none !important;
  }
  a,
  a:visited {
    text-decoration: underline;
  }
  a[href]:after {
    content: " (" attr(href) ")";
  }
  abbr[title]:after {
    content: " (" attr(title) ")";
  }
  /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */
  a[href^="#"]:after,
  a[href^="javascript:"]:after {
    content: "";
  }
  pre {
    white-space: pre-wrap !important;
  }
  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }
  /*
     * Printing Tables:
     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
     */
  thead {
    display: table-header-group;
  }
  tr,
  img {
    page-break-inside: avoid;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h2,
  h3 {
    page-break-after: avoid;
  }
}

